--- a/mittwoch.html
+++ b/mittwoch.html
@@ -38,7 +38,7 @@
 <body>
     <header>
         <h1>willkommen!!!</h1>
-        <h3>auf meiner website</h3>
+        <h3 id="leyenda">auf meiner website</h3>
         <nav>
             <ul id="menu">
                 <li><a href="#home">Inicio</a></li>
@@ -50,8 +50,12 @@
     <main>
         <article>
             <h3>was wünschen Sie?.</h3>
-            <p>Die Güte, die Sicherheit, es kann sein. </p>
+            <p class="importante">Die Güte, die Sicherheit, es kann sein. </p>
         </article>
+        <div id="caja">
+            <p>die Sonne schneit. Es ist warm, es ist kalt. Das ruhige Leben verjünt</p> <!-- como son las tabulaciones en el texto??-->
+
+        </div>
     </main>
     <footer>
         <p>2025 einer tollen website</p>
