--- a/estructuras/mittwoch.html
+++ b/estructuras/mittwoch.html
@@ -4,7 +4,7 @@
     <!-- no entiendo muy bien las tabulaciones -->
     <meta charset="UTF-8">
     <title>navegador cool</title> <!-- lo que aparece en la pestaña -->
-    <link rel="stylesheet" href="mittstyle.css" /> <!-- La propiedad rel="stylesheet" le dice al navegador que es una hoja de estilos -->
+    <link rel="stylesheet" href="../design/mittstyle.css" /> <!-- La propiedad rel="stylesheet" le dice al navegador que es una hoja de estilos -->
     <!-- <style>
          h1 {
             color: blueviolet;
@@ -41,8 +41,8 @@
         <h3 id="leyenda">auf meiner website</h3>
         <nav>
             <ul id="menu">
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#fav">seccion favorita</a></li>
+                <li><a href="index.html">al index</a></li>
+                <li><a href="carta-pc.html">seccion favorita</a></li>
                 <li>das ist selbstverständlich</li>
             </ul>
         </nav>
