--- a/estructuras/praktisch.html
+++ b/estructuras/praktisch.html
@@ -4,7 +4,7 @@
         <title>praktisch</title>
         <link rel="stylesheet" href="../design/pintado.css">
         <link rel="stylesheet" href="../design/fonts.css">
-
+        
    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +15,7 @@
       </style>-->
    </head>
    <body>
+    <script src="../sentido.js"></script>
         <h1>denken</h1>
         <h2>der hund</h2>
         <p class="veridico">ich höre gerne musik. Was für Musik hörst du gern?</p>
